--- a/resume.html
+++ b/resume.html
@@ -27,16 +27,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/CV/sample-cv.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -54,21 +54,23 @@
                         </h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="01/2010 - 12/2013">
-                    <h4>Universidade de Guarulhos - UNG</h4>
-                    <p>Industrial Design</p>
-                </div>
-                <div class="timeline-item" data-dates="06/2014 - 02/2015">
-                    <h4>Elta College</h4>
-                    <p>English</p>
-                </div>
-                <div class="timeline-item" data-dates="02/2016 - 02/2019">
-                    <h4>Dublin College - CCT</h4>
-                    <p>Business Management</p>
-                </div>
-                <div class="timeline-item" data-dates="02/2019 - Present">
-                    <h4>Code Institute - CCT</h4>
-                    <p>Full Stack Software Development</p>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="01/2010 - 12/2013">
+                        <h4>Universidade de Guarulhos - UNG</h4>
+                        <p>Industrial Design</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2014 - 02/2015">
+                        <h4>Elta College</h4>
+                        <p>English</p>
+                    </div>
+                    <div class="timeline-item" data-dates="02/2016 - 02/2019">
+                        <h4>Dublin College - CCT</h4>
+                        <p>Business Management</p>
+                    </div>
+                    <div class="timeline-item" data-dates="02/2019 - Present">
+                        <h4>Code Institute - CCT</h4>
+                        <p>Full-Stack Software Development</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
@@ -109,31 +111,31 @@
                     <div class="col">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" area-valuemin="0" area-valuemax="100" style="width:90%;">
-                              <span class="sr-only">90% complete</span>  
+                                <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" area-valuemin="0" area-valuemax="100" style="width:80%;">
-                              <span class="sr-only">80% complete</span>  
+                                <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" area-valuemin="0" area-valuemax="100" style="width:70%;">
-                              <span class="sr-only">70% complete</span>  
+                                <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
                         </div>
-                         <div class="progress">
+                        <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" area-valuemin="0" area-valuemax="100" style="width:80%;">
-                              <span class="sr-only">80% complete</span>  
+                                <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">DJango / Python</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" area-valuemin="0" area-valuemax="100" style="width:80%;">
-                              <span class="sr-only">80% complete</span>  
+                                <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
