--- a/resume.html
+++ b/resume.html
@@ -164,26 +164,27 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
+                 <ul class="list-inline social-links">
+                    <!--<li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                    </li>
+                    </li>-->
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
+                        <a target="_blank" href="https://github.com/EliasOPrado">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/oliveira-prado-48725297/">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                    
+                    <!--<li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
@@ -200,7 +201,7 @@
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
