added a pdf cv, added more sections, using google maps apis

--- a/interests.html
+++ b/interests.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rosie Odenkirk</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Interests</title>
+    <link rel="icon" href="#"><!--link for a small incon of the page-->
 </head>
 
 <body>
@@ -21,8 +22,8 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title">Full Stack Developer</h2>
+                        <h1 class="name">Elias O. Prado</h1>
+                        <h2 class="title">Full Stack Developer Student at Code Institute</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -44,7 +45,7 @@
                                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/CV/elias-prado-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -76,11 +77,10 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">Lorem Ipsum</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+                                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi expedita quis atque error tempore fugiat exercitationem molestias at perferendis officiis a aliquid magnam necessitatibus, accusamus ab esse nihil.
+                                    <a href="https://google.com" target="_blank">google</a>
                                 </p>
                             </div>
                         </div>
@@ -91,11 +91,10 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">Lorem Ipsum</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In rerum nisi expedita quis atque error tempore fugiat exercitationem molestias at perferendis officiis a aliquid magnam necessitatibus, accusamus ab esse nihil.
+                                    <a href="https://google.com" target="_blank">google</a>
                                 </p>
                             </div>
                         </div>
@@ -146,7 +145,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/CV/elias-prado-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -199,6 +198,14 @@
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
+    <script>
+    /*var no longer needed as the APIkey was added into the last script source*/
+        /*var APIkey = "AIzaSyBb1UxsONZi12CfnPgwHO3ws5vkLov6_gY";*/
+    </script>
+    <!--Marker cluster JS map-->
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <!--API key-->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb1UxsONZi12CfnPgwHO3ws5vkLov6_gY&callback=initMap"></script>
 </body>
 
 </html>
