--- a/github.html
+++ b/github.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/github-information.js"></script>
+    <script type="text/javascript" src="assets/JS/github-information.js"></script>
     <title>GitHub</title>
-    <link rel="icon" href="#"><!--link for a small incon of the page-->
+    <link rel="icon" href="#">
+    <!--link for a small incon of the page-->
 </head>
 
 <body>
@@ -67,9 +68,7 @@
                     <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
-
                 </div>
-
             </div>
         </div>
 
