fixed a bug on line 20 added a (;) on the end of the line not working the code.

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <script type="text/javascript">
         (function() {
             emailjs.init("user_DTRRy9keL5jt1ZbBmQNyG");
+            emailjs.send("gmail", "elias", {name: "Elias", notes: "The project that I want is..."})
         })();
     </script>
 </head>
