--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             <h5 class="uppercase text-center">Let's work together!</h5>
 
             <div class="center-form">
-                <form>
+                <form onsubmit="return sendEmail(this);" method="POST">
                     <input type="text" name="name" id="full-name" class="form-control" placeholder="Name" required/>
                     <input type="email" name="email" id="email-address" class="form-control" placeholder="Email" required/>
                     <textarea rowsa="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
@@ -142,6 +142,7 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="assets/JS/sendEmail.js"></script>
 </body>
 
 </html>
