added notation to remove a bug on contact.html and .js

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
             <h5 class="uppercase text-center">Let's work together!</h5>
 
             <div class="center-form">
+                /*need to fix and find the bug that is blocking to send emails using sendemail.js*/
                 <form onsubmit="return sendEmail(this);" method="POST">
                     <input type="text" name="name" id="full-name" class="form-control" placeholder="Name" required/>
                     <input type="email" name="email" id="email-address" class="form-control" placeholder="Email" required/>
