--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,10 @@
             <h5 class="uppercase text-center">Let's work together!</h5>
 
             <div class="center-form">
-                /*need to fix and find the bug that is blocking to send emails using sendemail.js*/
-                <form onsubmit="return sendEmail(this);" method="POST">
-                    <input type="text" name="name" id="full-name" class="form-control" placeholder="Name" required/>
-                    <input type="email" name="email" id="email-address" class="form-control" placeholder="Email" required/>
-                    <textarea rowsa="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                <form onsubmit="return sendMail(this);" method="POST">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Name" required/>
+                    <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                    <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
                     <div class="form-row text-center">
                         <div class="col">
                             <button type="submit" class="btn btn-secondary">Send Project Request</button>
